--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "forceConsistentCasingInFileNames": true, // este nose q onda
+    "strict": false,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true, // este nose  qonda
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
@@ -20,10 +20,27 @@
       "es2018",
       "dom"
     ]
+
+
+    // "compileOnSave": false,
+    // "compilerOptions": {
+    //   "baseUrl": "./",
+    //   "outDir": "./dist/out-tsc",
+    //   "sourceMap": true,
+    //   "declaration": false,
+    //   "downlevelIteration": true,
+    //   "experimentalDecorators": true,
+    //   "module": "esnext",
+    //   "moduleResolution": "node",
+    //   "importHelpers": true,
+    //   "target": "es2015",
+    //   "lib": [
+    //     "es2018",
+    //     "dom"
+    //   ]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
   }
 }
